# chess-coach

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  bug-report-chess-coach-mcp-2026-02-24-58e1763.md  bug-report-chess-coach-mcp-2026-02-24-comprehensive.md  docker-compose.yml  entrypoint.sh  flake.nix  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tactics-improvements.md  tsconfig.json
data/: knowledge_base.json
debug/: test-server.sh
docs/: COSTS.txt  coach-selection-bug-fix.md  design-docs-plan.md  theme-generation-system-prompt.md  theme-preview.html
docs/plans/: 2026-02-23-analysis-wave2-correctness.md  2026-02-23-wave2-plan1-forks-hanging.md  2026-02-23-wave2-plan2-trapped-mate.md  2026-02-23-wave2-plan3-backrank-development.md
guide/: ANALYSIS-PIPELINE.md  ARCHITECTURE.md  DESIGN-THEORY.md  DESIGN.md  LANDSCAPE.md  MATH.md  PEDAGOGY.md  ROADMAP.md  TACTICAL-CHAINING.md  TACTICS.md  TRADE-OFFS.md  UI.md  UX.md  VALUATION.md
patches/: chromadb_config.py.patch
src/frontend/: api.ts  board.ts  eval.ts  game.ts  main.ts  remote.ts
src/server/: analysis.py  annotator.py  cli.py  coach.py  config.py  config_flags.py  descriptions.py  elo_profiles.py  engine.py  game.py  game_tree.py  import_puzzles.py  knowledge.py  llm.py  main.py  mcp_server.py  motifs.py  opponent.py  puzzles.py  rag.py  (+4 more)
static/: chessground.css  index.html
tests/: eval_coaching.py  manual_verify_bg3.py  test_analysis.py  test_annotator.py  test_api.py  test_bug_fixes.py  test_chaining.py  test_coach.py  test_coach_selection_bug.py  test_coaching_prompts.py  test_config.py  test_descriptions.py  test_elo_profiles.py  test_engine.py  test_engine_lines.py  test_engine_protocol.py  test_feature_flags.py  test_game.py  test_game_tree.py  test_init_status.py  test_knowledge.py  test_lichess_tactics.py  test_llm.py  test_motifs.py  test_opponent.py  test_personas.py  test_puzzles.py  test_rag.py  test_report.py  test_screener.py  test_see.py  test_smoke.py  test_system_prompt.py  test_tier2_chains.py  test_upstream_drift.py  test_ws_engine.py
(+24 files in other folders)
