[project]
name = "chess-teacher"
version = "0.1.0"
description = "A chess teaching application"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-chess>=1.999",
    "chromadb>=0.6",
    "pydantic-settings>=2",
    "httpx>=0.28",
    "aiosqlite>=0.20",
    "zstandard>=0.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
]

[project.scripts]
chess-coach = "server.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# python-chess 1.11.2 dead alias triggers DeprecationWarning on 3.14+.
# Fixed upstream, not yet released: https://github.com/niklasf/python-chess/issues/1170
# Remove when chess >= 1.12 ships.
filterwarnings = [
    "ignore:'asyncio.DefaultEventLoopPolicy':DeprecationWarning:chess.engine",
]
markers = [
    "integration: marks tests that require external services (deselect with '-m \"not integration\"')",
    "live: marks tests that call a real LLM (run with '-m live')",
]
